--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
 title                    : "Home"
 title_separator          : "-"
-name                     : &name "Simone"
+name                     : &name "Stack-1"
 description              : &description "PhD Student"
 url                      : https://stack-1.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Simone Staccone"
   pronouns         :  # 
-  bio              : "I'm a PhD student invloved in HPC."
+  bio              : # 
   location         : "Rome, Italy"
   employer         : "Tor Vegata University"
   uri              : # URL
